objects/Consent_Purpose_History__c.object
<CustomObject>
    <description>This object stores changes from any of the Consent Purpose fields on the Contact object. The object is necessary because standard Salesforce Field Tracking History does not capture the old and new values for multi-select picklist fields (VSA-6).</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>This field contains the &apos;Changed From&apos; and &apos;Changed To&apos; values when someone updates any of the Consent Purpose fields on the Contact object. It is automatically populated by a process builder (VSA-6).</description>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the user who updated any of the Consent Purpose fields on the Contact object. It is populated by a process builder (VSA-6).</description>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consent_Purpose_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changed_Date_Time__c</fullName>
        <description>This field contains the timestamp for when the Consent Purpose field was updated (VSA-6).</description>
        <label>Changed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>This field contains the contact record which the consent purpose history record is related to (VSA-6).</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consent Purpose History</relationshipLabel>
        <relationshipName>Consent_Purpose_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Updated_Field__c</fullName>
        <description>This field contains a reference to which specific Consent Purpose field the change is triggered by (VSA-6).</description>
        <label>Updated Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postal Consent Purpose</fullName>
                </value>
                <value>
                    <fullName>Email Consent Purpose</fullName>
                </value>
                <value>
                    <fullName>Phone Consent Purpose</fullName>
                </value>
                <value>
                    <fullName>SMS Consent Purpose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Consent Purpose History</label>
    <nameField>
        <displayFormat>CPH-{0000}</displayFormat>
        <label>Consent Purpose History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Purpose History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>